@@ -38,6 +38,7 @@ import java.awt.event.ActionEvent;
 import java.awt.image.BufferedImage;
 
 import javax.swing.AbstractAction;
+import javax.swing.Icon;
 
 import junit.framework.TestCase;
 import ca.sqlpower.architect.ArchitectException;
@@ -58,7 +59,7 @@ public class TestAutoLayoutAction extends TestCase {
         TestingArchitectSwingSessionContext context = new TestingArchitectSwingSessionContext();
 		ArchitectSwingSession session = context.createSession();
         PlayPen pp = session.getPlayPen();
-		layoutAction = new AutoLayoutAction(session);
+		layoutAction = new AutoLayoutAction(session, "Tree Layout", "Basic tree layout", (Icon) null);
 		layout = new BasicTreeAutoLayout();
 		pp.repaint();
 		//action = af.getAutoLayoutAction();
